[gd_scene load_steps=7 format=3 uid="uid://fyydxt3pcvkm"]

[ext_resource type="Script" path="res://Script/bones.gd" id="1_ugf1e"]
[ext_resource type="Texture2D" uid="uid://dp0acwc56drrp" path="res://Images/SpriteSheet/bones.png" id="2_b5kjs"]
[ext_resource type="Texture2D" uid="uid://coifs87pf5cd0" path="res://Images/Keyboard Letters and Symbols.png" id="3_8r2fo"]
[ext_resource type="AudioStream" uid="uid://msrcofqqid4s" path="res://Audio/SFX/travel.ogg" id="4_mwjn2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0akq"]
size = Vector2(11, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhdnj"]
atlas = ExtResource("3_8r2fo")
region = Rect2(64, 32, 16, 16)

[node name="BonesE" type="Node2D"]
position = Vector2(0, 19)
script = ExtResource("1_ugf1e")

[node name="Bones" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-4.76837e-07, -0.999974)
scale = Vector2(0.160527, 0.160527)
texture = ExtResource("2_b5kjs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
y_sort_enabled = true
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_v0akq")

[node name="KeyPrompt" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(0, -19)
scale = Vector2(0.71875, 0.71875)
texture = SubResource("AtlasTexture_yhdnj")

[node name="TravelSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_mwjn2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
